# linux_c_myftp

./: README.md
client/: config.h.in  configure  configure.in  createconn.c  localcommand.c  makefile.am  makefile.in  myftp.c  myftp_header.h  recvfile.c  remotecommand.c  sendfile.c
client/autom4te.cache/: output.0  traces.0  traces.1
docs/: 函数接口说明.doc  答辩PPT.ppt  需求书.xls
server/: config.h.in  configure  configure.in  ftppublic.h  ftpserver.h  makefile.am  makefile.in  recvfile_server.c  sendfile_server.c  server_back.c  server_front.c  session_service.c  usercommand.c  userlist.c
server/autom4te.cache/: output.0  traces.0  traces.1
